agg: Pull in updated scanline + basics header from 2.4

* Resolves #13382